syntax = "proto3";

package reserve;
option go_package="./reserve";

service ReserveService {
  rpc ReserveOrder(ReserveOrderRequest) returns (ReserveOrderResponse);
}

message ReserveOrderRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message ReserveOrderResponse {
}

message Product {
  int64 product_id = 1;
  string name = 2;
  string desc = 3;
  string image = 4;
  int64 stock = 5;
  int64 create_time = 6;
}